UI. Fix. PacketListItem. Title overflow - Поправлено отображение длинных названий пакетов (обрезка + троеточие)

--- a/src/app/components/atoms/status-label/status-label.component.css
+++ b/src/app/components/atoms/status-label/status-label.component.css
@@ -5,7 +5,7 @@
   padding: 1px 8px;
   border-radius: 4px;
   height: 20px;
-  width: fit-content;
+  width: max-content;
 
   font-size: 12px;
   line-height: 18px;
